--- a/components/photos/Photo.module.scss
+++ b/components/photos/Photo.module.scss
@@ -159,6 +159,7 @@ figure.effect_zoe p.icon_links a span::before {
 .icon_heart_active::before {
 	content: '\e024';
 	color: #d60e96;
+	font-size: 2.5rem;
 }
 
 figure.effect_zoe h2 {
